experiments/reentrant-locks/report.txt
#0
main.cpp:53: error: Atomicity Violation
  Atomicity Violation! - Functions 'Test::f1' and 'Test::f2' should be called atomically.
  51. 	{
  52. 		while (a) mutex.lock(); // {f1, f2}; {f1, f2, f3}
  53. 		f1(); f2(); // (f1, f2)
              ^
  54. 		while (a) mutex.unlock();
  55. 		f3(); // (f2, f3)

#1
main.cpp:77: error: Atomicity Violation
  Atomicity Violation! - Functions 'Test::f1' and 'Test::f2' should be called atomically.
  75. 		while (a) mutex.unlock();
  76. 
  77. 		f1(); f2(); // (f1, f2); (f3, f1)
              ^
  78. 	}
  79. };

#2
main.cpp:69: error: Atomicity Violation
  Atomicity Violation! - Functions 'Test::f1' and 'Test::f3' should be called atomically.
  67. 		x();
  68. 
  69. 		f1(); f3(); // (f1, f3)
              ^
  70. 
  71. 		y();

#3
main.cpp:55: error: Atomicity Violation
  Atomicity Violation! - Functions 'Test::f2' and 'Test::f3' should be called atomically.
  53. 		f1(); f2(); // (f1, f2)
  54. 		while (a) mutex.unlock();
  55. 		f3(); // (f2, f3)
        ^
  56. 	}
  57. 

#4
main.cpp:74: error: Atomicity Violation
  Atomicity Violation! - Functions 'Test::f2' and 'Test::f3' should be called atomically.
  72. 
  73. 		while (a) mutex.lock(); // {f2, f3}; {f1, f2, f3}
  74. 		f2(); f3(); // (f2, f3)
              ^
  75. 		while (a) mutex.unlock();
  76. 

#5
main.cpp:77: error: Atomicity Violation
  Atomicity Violation! - Functions 'Test::f3' and 'Test::f1' should be called atomically.
  75. 		while (a) mutex.unlock();
  76. 
  77. 		f1(); f2(); // (f1, f2); (f3, f1)
        ^
  78. 	}
  79. };

Found 6 issues
                      Issue Type(ISSUED_TYPE_ID): #
  Atomicity Violation(ATOMICITY_VIOLATION_ERROR): 6
